tests/extensions/classes/semanticErr/badFieldTypeAssignment.wacc
begin
    class sa is
        int a
        char b
    end
    sa obj = sa{1, 2}
end
